--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,17 @@
 # bootstrap.yml 공통 환경설정 파일. 기본 프로파일은 native,local로 지정
 spring:
+  profiles:
+    active: native,local
   config:
     name: configserver
-  profiles:
-    active: native, local
+  application:
+    name: config-service
+
+eureka:
+  client:
+    registryFetchIntervalSeconds: 5
+    enabled: true
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
