--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -1,12 +1,18 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.1'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'org.springframework.boot' version '2.3.1.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
 }
 
-group = 'com.hotdeal'
+group = 'com.wantdeal'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -14,8 +20,9 @@ repositories {
 }
 
 ext {
-    set('springCloudVersion', "2020.0.0-RC1")
+    set('springCloudVersion', "Hoxton.SR7")
 }
+
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
