--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -23,16 +23,22 @@ ext {
     set('springCloudVersion', "Hoxton.SR7")
 }
 
+
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation("org.springframework.cloud:spring-cloud-starter-zipkin:2.2.4.RELEASE")
-    implementation("org.springframework.cloud:spring-cloud-starter-sleuth:2.2.4.RELEASE")
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.4.1'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile("org.mariadb.jdbc:mariadb-java-client")
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 dependencyManagement {
