--- a/gateway/src/main/resources/bootstrap-local.yml
+++ b/gateway/src/main/resources/bootstrap-local.yml
@@ -6,5 +6,5 @@ spring:
       #uri: http://localhost:8888
       fail-fast: true
       discovery:
-        service-id: config-service
+        service-id: configserver
         enabled: true
